docs/2.3.0/products/simple.md
# Simple Product

A **simple product** is a product type in e-commerce that does not require customers to choose additional attributes (such as size or color) to add to the cart. It should be a physical item and can be shipped to customers.

Therefore, any service, such as downloadable items, does not count as a simple product. This is the step-by-step tutorial on how to add a simple product in [Bagisto](https://bagisto.com/en/).

### Create Simple Product in Bagisto 2.3.0
1. Click on **Catalog >> Products >>** select **Simple** under Product Type.

    ![Simple](../../assets/2.3.0/images/simple-product/simple.png)

Now **Save the Product**, and you will get redirected to the Edit product page as shown below.

### General Attributes
Below is the list of fields you need to fill under General Attributes.

   ![editProduct](../../assets/2.3.0/images/simple-product/editProduct.png)

### Description
Below is the list of the fields you need to fill in regarding the product under description.

#### Short Description
Enter a short description of the feature of the product.

#### Description
Mention your product in detail.

 ![description](../../assets/2.3.0/images/simple-product/description.png)

### Meta Description
Below is the list of fields that you need to provide under the meta description to make your product easily searchable on search engines.

#### Meta Title
Provide the main title of the product by which your product will be known.

#### Meta Keyword
The meta keyword for the product needs to be provided to improve its searchability on the search engine for specific keywords.

#### Meta Description
Enter the description so that products can easily appear in search engine listings.

![metaDescription](../../assets/2.3.0/images/simple-product/metaDescription.png)

### Images
To add the product images, click on **Add Images**. You can add multiple images for your product.

![image](../../assets/2.3.0/images/simple-product/image.png)

### Customizable Item
A customization item is a feature, component, or service that can be tailored to meet specific user needs, ensuring a personalized experience. There is the list of fields you need to provide under the Customizable Item section to allow product personalization in Bagisto:

**Title**

Provide the title of the customization by which will be known in Product.

**Type**

Customization options allow customers to personalize products based on their preferences. Different input types help businesses collect specific details from customers. Below is a detailed explanation of various customization types .

1. **Text :** Allows users to enter a short text, such as a name or a short message.
2. **Textarea :** Provides a larger text box where users can enter longer messages or   instructions.
3. **Checkbox :** Allows customers to select multiple options from a list.
4. **Radio :** Allows customers to select one option from multiple choices.
5. **Select :** Provides a dropdown list with multiple choices but allows the selection of only one.
6. **Multi-Select :** Similar to the select dropdown, but customers can select more than one option.
7. **Date :** Allows customers to select a specific date.
8. **DateTime :** Allows users to choose both a date and a time together. 
9. **Time :** Enables users to select only a time value.
10. **File :** Allows users to upload an image, logo, or other files for customization.

![customization](../../assets/2.3.0/images/simple-product/customization.png)

**Is Required**

This Feature allows admins to specify whether a customization field must be filled before checkout.

![customization](../../assets/2.3.0/images/simple-product/is-required.png)

**Front End**

The customization on product will be visible as given below on the front end.

![customization](../../assets/2.3.0/images/simple-product/custom-item.png)

### New
Enable the toggle button if you want to feature the product as a new product. The resulting product will be shown under the New Products section.

### Featured
Enable the toggle button if you want to show the product under the Featured Products section.

### Visible Individually
Enable the toggle button so that the product will be visible on the front end.

### Status
Enable the toggle button to enable the product on your eCommerce store.

### Guest Checkout
Enable the toggle button to allow the product to be ordered by guest customers.

![toggleButtons](../../assets/2.3.0/images/simple-product/toggleButtons.png)

### Price
Insert the price, cost, and special price, and set the special price date for which the special price will be shown on the website.

![price](../../assets/2.3.0/images/simple-product/price.png)

### Shipping
Set the Width, Height, Depth, and Weight of the product.

![shipping](../../assets/2.3.0/images/simple-product/shipping.png)

### Inventories
Insert the quantity of the product that is there in your inventory. By default, it is set to 0 so it shows on the front end as out of stock.

![inventories](../../assets/2.3.0/images/simple-product/inventories.png)

### Channels

Select the channels in which you want to save this product.

![Channels](../../assets/2.3.0/images/simple-product/channels.png)

At last, **Save the Product**.

### Front End
The product will be visible as given below on the front end.

![product](../../assets/2.3.0/images/simple-product/product.png)

